--- a/VoteIT/VoteIT/ClientApp/src/components/NavMenu.css
+++ b/VoteIT/VoteIT/ClientApp/src/components/NavMenu.css
@@ -1,4 +1,7 @@
-﻿a.navbar-brand {
+﻿header{
+    width:100%;
+}
+a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
