--- a/VoteIT/VoteIT/ClientApp/src/components/CandidatePage/NavMenuCandidate.css
+++ b/VoteIT/VoteIT/ClientApp/src/components/CandidatePage/NavMenuCandidate.css
@@ -21,3 +21,28 @@ html {
 .box-shadow {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+
+.menu-icon {
+    width:30px;
+    height:30px;
+}
+
+.row-header {
+    width:100%;
+}
+
+.button-sidebar {
+    margin-top:0px;
+   padding-top:0px;
+}
+
+
+.container {
+    margin-left:0px !important;
+    margin-right:0px !important;
+    max-width:100% !important;
+}
+
+.bm-overlay {
+    background: rgba(255,255,255, 0) !important;
+}
