--- a/VoteIT/VoteIT/ClientApp/src/components/LoginPage/LoginPage.css
+++ b/VoteIT/VoteIT/ClientApp/src/components/LoginPage/LoginPage.css
@@ -2,9 +2,6 @@
     font-family:Arial, Arial, Helvetica, sans-serif;
 }
 
-form{
-    border: 3px solid #f1f1f1;
-}
 
 input[type=text], input[type=password] {
     width: 100%;
@@ -33,10 +30,10 @@ button{
     background-color: #4CAF50;
     color:white;
     padding:14px 20px;
-    margin: 8px 0;
+    margin: 0 auto;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 15%;
 }
 
 button:hover {
