added some front-end, votinghistory structure, toaster for create account and fix date format

--- a/VoteIT/VoteIT/ClientApp/src/components/HomePage/Home.css
+++ b/VoteIT/VoteIT/ClientApp/src/components/HomePage/Home.css
@@ -4,12 +4,14 @@
     background-color: yellow;
 }
 
-#button_register {
+.button_register {
     background-color: #4CAF50;
     color: white;
+    width: 50px;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
+    border-radius: 20px;
 }
